LablGL 0.92:
------------

* allow use of newer patch levels for Tk.

* corrected bugs in the Raw module. Now, it handles correctly
  alignment constraints on doubles.

* added the Raw.sub function, which extracts a slice from an existing
  raw array.  Values are still physically shared with the original
  array.

LablGL 0.91:
------------

* switched to Togl-1.5. The previous versions had problems on Linux.

LablGL 0.9:
-----------

* first public release